--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </div>
                 </div>
                 <div class="vsl">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/PdI98sfh8e8" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="900" height="550" src="https://www.youtube.com/embed/PdI98sfh8e8" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
 
@@ -80,11 +80,11 @@
         
         <footer class="contenedor__footer">
             <div class="footer__info">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit, amet consectetur adipisicing elit.</p>
                 <div class="footer__logo">
                     <img src="./img/icono.png" alt="logo_de_empresa">
                     <span>Growth PULSE</span>
                 </div>
+                <p>&copy; 2024 Growth PULSE. <br> Todos los derechos reservados.</p>
             </div>
 
             <!-- <div class="footer__redes">
@@ -103,24 +103,24 @@
                     <a href="#"><img src="./img/linkedin.png" alt="logo_"></a>
                 </div>
                 <div class="lista__item">
-                    <a href="#"><img src="./img/linkedin.png" alt="logo_"></a>
+                    <a href="#"><img src="./img/instagram.png" alt="logo_"></a>
                 </div>
                 <div class="lista__item">
-                    <a href="#"><img src="./img/linkedin.png" alt="logo_"></a>
+                    <a href="#"><img src="./img/whatsapp.png" alt="logo_"></a>
                 </div>
                 <div class="lista__item">
-                    <a href="#"><img src="./img/linkedin.png" alt="logo_"></a>
+                    <a href="#"><img src="./img/facebook.png" alt="logo_"></a>
                 </div>
                 <div class="lista__item">
-                    <a href="#"><img src="./img/linkedin.png" alt="logo_"></a>
+                    <a href="#"><img src="./img/email.png" alt="logo_"></a>
                 </div>
                 <div class="lista__item">
-                    <a href="#"><img src="./img/linkedin.png" alt="logo_"></a>
+                    <a href="#"><img src="./img/youtube.png" alt="logo_"></a>
                 </div>
             </div>
 
             <div class="footer__newsletter">
-                <span>Suscribite al Newsletter para estar informado sobre novedades, promociones y noticas.</span>
+                <span>Suscribite al Newsletter para informado con las nuevas noticias.</span>
                 <div class="newsletter">
                     <input type="email">
                     <button class="btn2">Suscribite</button>
