--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <header class="contenedor__header">
             <div class="header__timer" id="temporizador"></div>
             <div class="hedaer__btnCTA">
-                <a href="#calendly"><button class="btnCTA">Agendar <span>llamada</span></button></a>
+                <a href="#calendly"><button class="btnCTA">Agendar llamada</button></a>
             </div>
             <div class="header__promesa">
                 <p><span>Oportunidad Única</span> | Durante todo este mes vamos a estar dando asesorías gratuitas para conocer tu negocio a fondo y ver la mejor manera de escalar. <span>(Las asesorías se duplicarán cuando el contador llegue a cero).</span></p>
@@ -51,19 +51,19 @@
                 <h3>Confiaron en <span>Growth Pulse</span></h3>
                 <div class="socialProof__cards">
                     <div class="card">
-                        <img src="./img/cliente1.jpg" alt="cliente">
+                        <div class="conteiner__img"></div>
                         <h2>German <span>triano</span></h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus.</p>
                         <button class="btn">Mas info</button>
                     </div>
                     <div class="card">
-                        <img src="./img/logo1.jpeg" alt="cliente">
+                        <div class="conteiner__img"></div>
                         <h2>Facundo <span>ledesma</span></h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus.</p>
                         <button class="btn">Mas info</button>
                     </div>
                     <div class="card">
-                        <img src="./img/logo1.jpeg" alt="cliente">
+                        <div class="conteiner__img"></div>
                         <h2>Lorem <span>Ipsum</span></h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus.</p>
                         <button class="btn">Mas info</button>
@@ -82,21 +82,10 @@
             <div class="footer__info">
                 <div class="footer__logo">
                     <img src="./img/icono.png" alt="logo_de_empresa">
-                    <span>Growth PULSE</span>
+                    <span>Growth Pulse</span>
                 </div>
                 <p>&copy; 2024 Growth PULSE. <br> Todos los derechos reservados.</p>
             </div>
-
-            <!-- <div class="footer__redes">
-                <ul class="redes__lista">
-                    <li class="lista__item"><i class="fa-brands icono fa-linkedin"></i><a class="item__link" href="#"></a></li>
-                    <li class="lista__item"><i class="fa-brands icono fa-youtube"></i><a class="item__link" href="#"></a></li>
-                    <li class="lista__item"><i class="fa-brands icono fa-square-instagram"></i><a class="item__link" href="#"></a></li>
-                    <li class="lista__item"><i class="fa-brands icono fa-telegram"></i><a class="item__link" href="#"></a></li>
-                    <li class="lista__item"><i class="fa-brands icono fa-whatsapp"></i><a class="item__link" href="#"></a></li>
-                    <li class="lista__item"><i class="fa-solid icono fa-envelope"></i><a class="item__link" href="#"></a></li>
-                </ul>
-            </div> -->
 
             <div class="footer__redes">
                 <div class="lista__item">
@@ -120,11 +109,11 @@
             </div>
 
             <div class="footer__newsletter">
-                <span>Suscribite al Newsletter para informado con las nuevas noticias.</span>
-                <div class="newsletter">
-                    <input type="email">
-                    <button class="btn2">Suscribite</button>
-                </div>
+                <span class="displayBig">Suscribite al Newsletter para informado con las nuevas noticias.</span>
+                <span class="displaySmall">Suscribite al Newsletter</span>
+                <span class="displayXSmall">Newsletter</span>
+                <input type="email">
+                <button class="btn2">Suscribite</button>
             </div>
         </footer>
 
