--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="Descubre cómo nuestro metodo Pulse impulso el éxito de empresas con estrategias de crecimiento probadas. Conoce nuestros casos de éxito y agenda una llamada para explorar cómo podemos ayudarte a alcanzar tus objetivos de negocio.">
+    <meta name="keywords" content="Growth partner, Estrategias de crecimiento, Contenido organico, Redes sociales, Consultoría de marketing, Growth pulse, Facundo ledesma, Editor de videos">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Growth PULSE</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -52,7 +54,7 @@
                 <div class="socialProof__cards">
                     <div class="card">
                         <div class="conteiner__img"></div>
-                        <h2>German <span>triano</span></h2>
+                        <h2>Franco <span>di marco</span></h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus.</p>
                         <button class="btn">Mas info</button>
                     </div>
