--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Descubre cómo nuestro metodo Pulse impulso el éxito de empresas con estrategias de crecimiento probadas. Conoce nuestros casos de éxito y agenda una llamada para explorar cómo podemos ayudarte a alcanzar tus objetivos de negocio.">
     <meta name="keywords" content="Growth partner, Estrategias de crecimiento, Contenido organico, Redes sociales, Consultoría de marketing, Growth pulse, Facundo ledesma, Editor de videos">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Growth PULSE</title>
+    <title>Growth Pulse</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -35,13 +35,13 @@
                 <p>En <span>90 días</span> le damos un giro de 360° a tu negocio, <span>estudiando tu nicho y tu oferta</span>, ajustaremos las metricas y definiremos la estrategia para <span>escalar tu negocio</span> a <span>$10.000 usd de facturación mensual</span></p>
                 <div class="redes">
                     <div class="redes__item">
-                        <a href="#"><img src="./img/linkedin.png" alt="logo_linkedin"></a>
+                        <a href="https://www.linkedin.com/in/facundo-n-ledesma-29521a285/"><img src="./img/linkedin.png" alt="logo_linkedin"></a>
                     </div>
                     <div class="redes__item">
-                        <a href="#"><img src="./img/instagram.png" alt="logo_instagram"></a>
+                        <a href="https://www.instagram.com/facu_ledesma18/reels/"><img src="./img/instagram.png" alt="logo_instagram"></a>
                     </div>
                     <div class="redes__item">
-                        <a href="#"><img src="./img/youtube.png" alt="logo_youtube"></a>
+                        <a href="https://www.youtube.com/@faculedesma18/shorts"><img src="./img/youtube.png" alt="logo_youtube"></a>
                     </div>
                 </div>
                 <div class="vsl">
@@ -55,19 +55,23 @@
                     <div class="card">
                         <div class="conteiner__img"></div>
                         <h2>Franco <span>di marco</span></h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus.</p>
+                        <p class="parrafo">El negocio fitness me estaba matando, vivía estresado, sin tiempo, no me podía alimentar correctamente y no podía ver buenos ingresos, tenia perdidas antes que ganancias, Luego accedi al método pulse y pude volver a impactar positivamente cientos de vidas, Me posicionaron como experto y autoridad en mi nicho además de poder predecir mi facturación a futuro.</p>
+                        <button class="more">Leer más</button>
                         <button class="btn">Mas info</button>
                     </div>
                     <div class="card">
                         <div class="conteiner__img"></div>
-                        <h2>Facundo <span>ledesma</span></h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus.</p>
+                        <h2>Erik <span>Bauman</span></h2>
+                        <p class="parrafo">Cuando conocí al equipo de Facu me enseñaron el método Pulse, lo cual a mi negocio que venía decayendo hace varios meses le sirvió, pude volver a tener una escalabilidad medible, me escalaron como experto y me dejaron un negocio en semi automático, lo cual me libero tiempo que lo invierto en otras áreas.</p>
+                        <button class="more">Leer más</button>
                         <button class="btn">Mas info</button>
                     </div>
                     <div class="card">
                         <div class="conteiner__img"></div>
-                        <h2>Lorem <span>Ipsum</span></h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus.</p>
+                        <h2>German <span>triano</span></h2>
+                        <p class="parrafo">Por referencia de un cliente de Facu conocí Growth Pulse, accedí a la asesoría gratuita y en 30 minutos pude entender cuáles eran los factores que limitaban mi negocio.
+                            Realizamos una nueva oferta, la cual era Cold Friendly. Me posicionaron mi agencia en LinkedIn y pudimos solucionar el problema de llegada de nuevos potenciales clientes, sin dudas conocer el Equipo de Growth Pulse me ayudó a mejorar tanto Profesional como Personalmente.</p>
+                        <button class="more">Leer más</button>
                         <button class="btn">Mas info</button>
                     </div>
                 </div>
@@ -91,29 +95,28 @@
 
             <div class="footer__redes">
                 <div class="lista__item">
-                    <a href="#"><img src="./img/linkedin.png" alt="logo_"></a>
+                    <a href="https://www.linkedin.com/in/facundo-n-ledesma-29521a285/"><img src="./img/linkedin.png" alt="logo_"></a>
                 </div>
                 <div class="lista__item">
-                    <a href="#"><img src="./img/instagram.png" alt="logo_"></a>
+                    <a href="https://www.instagram.com/facu_ledesma18/reels/"><img src="./img/instagram.png" alt="logo_"></a>
                 </div>
                 <div class="lista__item">
-                    <a href="#"><img src="./img/whatsapp.png" alt="logo_"></a>
+                    <a href="https://wa.me/543815292830?text=Hola%20Facu,%20quiero%20más%20información%20del%20método%20Pulse
+                    "><img src="./img/whatsapp.png" alt="logo_"></a>
                 </div>
                 <div class="lista__item">
-                    <a href="#"><img src="./img/facebook.png" alt="logo_"></a>
+                    <a href="mailto:fnledesma1@gmail.com?subject=Consulta&body=Hola,%20estoy%20interesado%20en%20obtener%20más%20información.
+                    "><img src="./img/email.png" alt="logo_"></a>
                 </div>
                 <div class="lista__item">
-                    <a href="#"><img src="./img/email.png" alt="logo_"></a>
-                </div>
-                <div class="lista__item">
-                    <a href="#"><img src="./img/youtube.png" alt="logo_"></a>
+                    <a href="https://www.youtube.com/@faculedesma18/shorts"><img src="./img/youtube.png" alt="logo_"></a>
                 </div>
             </div>
 
             <div class="footer__newsletter">
-                <span class="displayBig">Suscribite al Newsletter para informado con las nuevas noticias.</span>
-                <span class="displaySmall">Suscribite al Newsletter</span>
-                <span class="displayXSmall">Newsletter</span>
+                <span class="displayBig">Suscribite al Newsletter para estar informado de las nuevas noticias.</span>
+                <span class="displaySmall">Suscribite al Newsletter.</span>
+                <span class="displayXSmall">Newsletter.</span>
                 <input type="email">
                 <button class="btn2">Suscribite</button>
             </div>
