--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <main class="contenedor__main">
             <div class="main__presentacion">
                 <h1 class="logo">Growth <span>Pulse</span></h1>
-                <p>En <span>90 días</span> le damos un giro de 360° a tu negocio, <span>estudiando tu nicho y tu oferta</span>, ajustaremos las metricas y definiremos la estrategia para <span>escalar tu negocio</span> a <span>$10.000 usd de facturación mensual</span></p>
+                <h2>EN <span>90 DÍAS</span> TE AYUDO A DAR UN GIRO DE 360° A TU NEGOCIO Y <span>ESCALAR A $10.000+ USD MENSUAL</span></h2>
+                <h3>Estudiando tu nicho y oferta, ajustamos las métricas y definimos la mejor estrategia para alcanzar los objetivos.</h3>
                 <div class="redes">
                     <div class="redes__item">
                         <a href="https://www.linkedin.com/in/facundo-n-ledesma-29521a285/"><img src="./img/linkedin.png" alt="logo_linkedin"></a>
@@ -111,14 +112,6 @@
                 <div class="lista__item">
                     <a href="https://www.youtube.com/@faculedesma18/shorts"><img src="./img/youtube.png" alt="logo_"></a>
                 </div>
-            </div>
-
-            <div class="footer__newsletter">
-                <span class="displayBig">Suscribite al Newsletter para estar informado de las nuevas noticias.</span>
-                <span class="displaySmall">Suscribite al Newsletter.</span>
-                <span class="displayXSmall">Newsletter.</span>
-                <input type="email">
-                <button class="btn2">Suscribite</button>
             </div>
         </footer>
 
