--- a/index.html
+++ b/index.html
@@ -54,24 +54,24 @@
                 <h3>Confiaron en <span>Growth Pulse</span></h3>
                 <div class="socialProof__cards">
                     <div class="card">
-                        <div class="conteiner__img"></div>
+                        <div class="conteiner__img1"></div>
                         <h2>Franco <span>di marco</span></h2>
-                        <p class="parrafo">El negocio fitness me estaba matando, vivía estresado, sin tiempo, no me podía alimentar correctamente y no podía ver buenos ingresos, tenia perdidas antes que ganancias, Luego accedi al método pulse y pude volver a impactar positivamente cientos de vidas, Me posicionaron como experto y autoridad en mi nicho además de poder predecir mi facturación a futuro.</p>
+                        <p class="parrafo">El negocio fitness me estaba matando, vivía estresado, sin tiempo, no me podía alimentar correctamente y no podía ver buenos ingresos, tenia perdidas antes que ganancias, Luego accedi al método pulse y pude volver a impactar positivamente cientos de vidas, Me posicionaron como experto y autoridad en mi nicho además de poder predecir mi facturación a futuro."</p>
                         <button class="more">Leer más</button>
                         <button class="btn">Mas info</button>
                     </div>
                     <div class="card">
-                        <div class="conteiner__img"></div>
+                        <div class="conteiner__img2"></div>
                         <h2>Erik <span>Bauman</span></h2>
-                        <p class="parrafo">Cuando conocí al equipo de Facu me enseñaron el método Pulse, lo cual a mi negocio que venía decayendo hace varios meses le sirvió, pude volver a tener una escalabilidad medible, me escalaron como experto y me dejaron un negocio en semi automático, lo cual me libero tiempo que lo invierto en otras áreas.</p>
+                        <p class="parrafo">"Cuando conocí al equipo de Facu me enseñaron el método Pulse, lo cual a mi negocio que venía decayendo hace varios meses le sirvió, pude volver a tener una escalabilidad medible, me escalaron como experto y me dejaron un negocio en semi automático, lo cual me libero tiempo que lo invierto en otras áreas."</p>
                         <button class="more">Leer más</button>
                         <button class="btn">Mas info</button>
                     </div>
                     <div class="card">
-                        <div class="conteiner__img"></div>
+                        <div class="conteiner__img3"></div>
                         <h2>German <span>triano</span></h2>
-                        <p class="parrafo">Por referencia de un cliente de Facu conocí Growth Pulse, accedí a la asesoría gratuita y en 30 minutos pude entender cuáles eran los factores que limitaban mi negocio.
-                            Realizamos una nueva oferta, la cual era Cold Friendly. Me posicionaron mi agencia en LinkedIn y pudimos solucionar el problema de llegada de nuevos potenciales clientes, sin dudas conocer el Equipo de Growth Pulse me ayudó a mejorar tanto Profesional como Personalmente.</p>
+                        <p class="parrafo">"Por referencia de un cliente de Facu conocí Growth Pulse, accedí a la asesoría gratuita y en 30 minutos pude entender cuáles eran los factores que limitaban mi negocio.
+                            Realizamos una nueva oferta, la cual era Cold Friendly. Me posicionaron mi agencia en LinkedIn y pudimos solucionar el problema de llegada de nuevos potenciales clientes, sin dudas conocer el Equipo de Growth Pulse me ayudó a mejorar tanto Profesional como Personalmente."</p>
                         <button class="more">Leer más</button>
                         <button class="btn">Mas info</button>
                     </div>
