--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
                 <div class="socialProof__cards">
                     <div class="card">
                         <div class="conteiner__img1"></div>
-                        <h2>Franco <span class="apellido">di marco</span><br><span class="prof">Couch fitness</span></h2>
+                        <h2>Franco <span class="apellido">di marco</span><br><span class="prof">Coach fitness</span></h2>
                         <p class="parrafo">"El negocio fitness me estaba matando, vivía estresado, sin tiempo, no me podía alimentar correctamente y no podía ver buenos ingresos, tenia perdidas antes que ganancias. Luego accedi al método pulse y pude volver a impactar positivamente cientos de vidas. Me posicionaron como experto y autoridad en mi nicho además de poder predecir mi facturación a futuro."</p>
                         <button class="more">Leer más</button>
                         <a class="enlace" href="https://www.youtube.com/watch?v=aZGFLzuxFlU&ab_channel=FacuLedesma">Mas info</a>
                     </div>
                     <div class="card">
                         <div class="conteiner__img2"></div>
-                        <h2>Erik <span class="apellido">Bauman</span><br><span class="prof">Growth Partner</span></h2>
+                        <h2>Erik <span class="apellido">Bauman</span><br><span class="prof">Asesor inmobiliario</span></h2>
                         <p class="parrafo">"Cuando conocí al equipo de Facu me enseñaron el método Pulse, lo cual a mi negocio que venía decayendo hace varios meses le sirvió, pude volver a tener una escalabilidad medible, me escalaron como experto y me dejaron un negocio en semi automático, lo cual me libero tiempo que lo invierto en otras áreas."</p>
                         <button class="more">Leer más</button>
                         <a class="enlace" href="https://wa.me/543815292830?text=Hola%20Facu,%20quiero%20más%20información%20del%20método%20Pulse">Mas info</a>
