--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Descubre cómo nuestro metodo Pulse impulso el éxito de empresas con estrategias de crecimiento probadas. Conoce nuestros casos de éxito y agenda una llamada para explorar cómo podemos ayudarte a alcanzar tus objetivos de negocio.">
     <meta name="keywords" content="Growth partner, Estrategias de crecimiento, Contenido organico, Redes sociales, Consultoría de marketing, Growth pulse, Facundo ledesma, Editor de videos">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Growth Pulse</title>
+    <title>Facundo Ledesma</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -31,9 +31,9 @@
 
         <main class="contenedor__main">
             <div class="main__presentacion">
-                <h1 class="logo">Growth <span>Pulse</span></h1>
-                <h2>EN <span>90 DÍAS</span> TE AYUDO A DAR UN GIRO DE 360° A TU NEGOCIO Y <span>ESCALAR A $10.000+ USD MENSUAL</span></h2>
-                <h3>Estudiando tu nicho y oferta, ajustamos las métricas y definimos la mejor estrategia para alcanzar los objetivos.</h3>
+                <h1 class="logo">Facundo <span>Ledesma</span></h1>
+                <h2>Mira este video para <span>confirmar tu llamada</span></h2>
+                <h3>(OBLIGATORIO)</h3>
                 <div class="redes">
                     <div class="redes__item">
                         <a href="https://www.linkedin.com/in/facundo-n-ledesma-29521a285/"><img src="./img/linkedin.png" alt="logo_linkedin"></a>
@@ -46,12 +46,15 @@
                     </div>
                 </div>
                 <div class="vsl">
-                    <iframe width="900" height="550" src="https://www.youtube.com/embed/8owwi7UoOnk" frameborder="0" allowfullscreen></iframe>
-                </div>
-            </div>
+                    <video id="video" class="video" width="900" height="550" autoplay controls>
+                        <source src="/video/video.mp4" type="video/mp4">
+                        Tu navegador no soporta el elemento de video.
+                    </video>
 
+                </div>
+                </div>
             <div class="main__socialProof">
-                <h3>Confiaron en <span>Growth Pulse</span></h3>
+                <h3>Confiaron en <span>Facundo Ledesma</span></h3>
                 <div class="socialProof__cards">
                     <div class="card">
                         <div class="conteiner__img1"></div>
@@ -77,21 +80,15 @@
                     </div>
                 </div>
             </div>
-            <div id="calendly" class="main__calendario">
-                <!-- Principio del widget integrado de Calendly -->
-                <div class="calendly-inline-widget" data-url="https://calendly.com/fnledesma1/comienza-hoy?hide_gdpr_banner=1" style="min-width:320px;height:700px;"></div>
-                <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-                <!-- Final del widget integrado de Calendly -->
-            </div>
         </main>
         
         <footer class="contenedor__footer">
             <div class="footer__info">
                 <div class="footer__logo">
                     <img src="./img/icono.png" alt="logo_de_empresa">
-                    <span>Growth Pulse</span>
+                    <span>Facundo Ledesma</span>
                 </div>
-                <p>&copy; 2024 Growth PULSE. <br> Todos los derechos reservados.</p>
+                <p>&copy; 2024 Facundo Ledesma. <br> Todos los derechos reservados.</p>
             </div>
 
             <div class="footer__redes">
