--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div class="vsl">
-                    <video id="video" class="video" width="900" height="550" autoplay controls>
+                    <video id="video" class="video" width="900" height="550" autoplay muted controls>
                         <source src="/video/video.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
