--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                     </div>
                 </div>
                 <div class="vsl">
-                    <video id="video" class="video" width="900" height="550" autoplay muted controls>
+                    <video class="video" autoplay muted controls>
                         <source src="/video/video.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
 
                 </div>
-                </div>
+            </div>
             <div class="main__socialProof">
                 <h3>Confiaron en <span>Facundo Ledesma</span></h3>
                 <div class="socialProof__cards">
