--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
                 <div class="vsl">
-                    <video class="video" autoplay muted controls>
+                    <video class="video" controls autoplay>
                         <source src="/video/video.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
