--- a/index.html
+++ b/index.html
@@ -46,15 +46,11 @@
                     </div>
                 </div>
                 <div class="vsl">
-                    <video class="video" controls autoplay>
-                        <source src="/video/video.mp4" type="video/mp4">
-                        Tu navegador no soporta el elemento de video.
-                    </video>
-
-                </div>
+                    <iframe src="https://www.youtube.com/embed/MgZony1nXiQ?si=zpc_FSySF9mcrVoZ&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div> 
             </div>
             <div class="main__socialProof">
-                <h3>Confiaron en <span>Facundo Ledesma</span></h3>
+                <h3>Confiaron en <br><span>Facundo Ledesma</span></h3>
                 <div class="socialProof__cards">
                     <div class="card">
                         <div class="conteiner__img1"></div>
